# sift

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
.claude/: settings.json
docs/: gallery.md
hooks/: pre-commit
icij_mcp/: opensanctions_client.py  server.py
open_investigator/: client.py  server.py
patterns/: INDEX.md  INDEX.yaml  bankruptcy-abuse.yaml  beneficial-ownership-gap.yaml  circular-ownership.yaml  cross-source-corroboration.yaml  director-disqualification-network.yaml  insider-self-dealing.yaml  intermediary-cluster.md  intermediary-cluster.yaml  llp-opacity-vehicle.yaml  mass-registration.yaml  matryoshka.md  matryoshka.yaml  mirror.md  mirror.yaml  name-variant-obfuscation.yaml  network-chokepoint.yaml  nominee-shield.md  nominee-shield.yaml  pep-opacity-layer.md  pep-opacity-layer.yaml  phoenix-company.yaml  property-layering.yaml  rapid-dissolution.yaml  regulatory-arbitrage-chain.md  regulatory-arbitrage-chain.yaml  sanctions-evasion-structure.md  sanctions-evasion.yaml  scatter-gather.yaml  shell-company-indicators.yaml  starburst.md  starburst.yaml  temporal-cluster.md  temporal-cluster.yaml
sift/: aleph_client.py  client.py  companies_house_client.py  courtlistener_client.py  errors.py  export.py  gleif_client.py  land_registry_client.py  normalizer.py  opensanctions_client.py  pattern_matcher.py  query_router.py  scan_history.py  scoring.py  sec_client.py  server.py  traversal.py  visualizer.py  wikidata_client.py
tests/: test_clients.py  test_errors.py  test_export.py  test_new_clients.py  (+6 more)
(+21 files in other folders)
