[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-investigator"
version = "0.3.0"
description = "MCP server for financial investigations — ICIJ Offshore Leaks + OpenSanctions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["open_investigator"]

[project.scripts]
open-investigator = "open_investigator.server:main"
