[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sift"
version = "0.4.0"
description = "MCP server that cross-references offshore leaks, sanctions, corporate registries, SEC filings, and court records"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sift"]

[project.scripts]
sift = "sift.server:main"
